// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLinkBox /> renders ButtonLinkBox 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      href="button-url"
      theme="purple"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      color="blue"
      href="link-url"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without button 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      color="blue"
      href="link-url"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without link 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      href="button-url"
      theme="purple"
    >
      button title
    </Button>
  </div>
</div>
`;
